fixed checkbox label text alignment.

--- a/src/checkbox.less
+++ b/src/checkbox.less
@@ -16,6 +16,7 @@
     label {
         display: inline-block;
         padding-left: @esui-checkbox-radio-label-padding;
+        vertical-align: baseline;
 
         // checkbox
         &:before {
